--- a/group_vars/all/repositories.yml
+++ b/group_vars/all/repositories.yml
@@ -1,3 +1,13 @@
 ---
-ansible_repos:
-  - { name: epel, description: "EPEL repository", baseurl: "https://download.fedoraproject.org/pub/epel/$releasever/$basearch/", gpgcheck: "no", gpgkey: "" } 
+group_repos:
+  - name: epel
+    description: "EPEL repository"
+    baseurl: "https://download.fedoraproject.org/pub/epel/$releasever/$basearch/"
+    gpgcheck: "no"
+    gpgkey: ""
+
+  - name: Docker
+    description: "Docker repository"
+    baseurl: "https://download.docker.com/linux/centos/$releasever/$basearch/stable"
+    gpgcheck: "yes"
+    gpgkey: "https://download.docker.com/linux/centos/gpg"
