--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,6 +3,7 @@
   tags:
     - firewall
 
-- include_tasks: add_repos.yml
+- include_tasks: add_yum_repos.yml
+- include_tasks: install_yum_packages.yml
 
-#- include_tasks: manage_pip.yml
+#- include_tasks: install_pip_packages.yml
