Added Docker service management and IAM for docker user

--- a/playbooks/install_CICD_lab.yml
+++ b/playbooks/install_CICD_lab.yml
@@ -8,4 +8,4 @@
     - ../roles/common
 
     ## MANAGE DOCKER (LIKE START / RESTART OR CHANGE CONFIGURATION)
-    - ../roles/docker
+    - ../roles/docker_engine
