--- a/roles/docker_engine/tasks/manage_state.yml
+++ b/roles/docker_engine/tasks/manage_state.yml
@@ -3,14 +3,18 @@
 
 - name: Enable and start docker service
   service:
-    name: docker
+    name: "{{ docker_service }}"
     state: started
     enabled: yes
   register: docker_state
+  tags:
+    - docker
 
 - name: Restart docker service if needed
   service:
-    name: docker
+    name: "{{ docker_service }}"
     state: restarted
   when:
-    - docker_state != ""
+    - docker_state.enabled == false
+  tags:
+    - docker
