Started writing logic for docker_compose

--- a/playbooks/install_CICD_lab.yml
+++ b/playbooks/install_CICD_lab.yml
@@ -9,3 +9,6 @@
 
     ## MANAGE DOCKER (LIKE START / RESTART OR CHANGE CONFIGURATION)
     - ../roles/docker_engine
+
+    ## START WITH DOCKER_COMPOSE
+    - ../roles/docker_compose
