--- a/group_vars/all/docker_compose.yml
+++ b/group_vars/all/docker_compose.yml
@@ -1,4 +1,6 @@
 ---
 docker_compose_file_name: "docker-compose"
-docker_compose_dest_dir: "/usr/local/bin"
-docker_compose_github_url: "https://github.com/docker/compose/releases/download/1.27.4/docker-compose"
+docker_compose_download_dest_dir: "/usr/local/bin"
+docker_compose_execute_dest_dir: "/usr/bin/docker-compose"
+
+docker_compose_github_url: "https://gitVM 
