--- a/roles/docker_compose.ci_cd_lab/tasks/main.yml
+++ b/roles/docker_compose.ci_cd_lab/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
-# tasks file for Docker_Compose.ci_cd_lab
+- name: Add host to docker_compose_ci_cd_lab group
+  add_host:
+    name: "{{ ansible_host }}"
+    groups: docker_compose_ci_cd_lab
+
 - name: Include task for preparation of Docker Compose project
   include_tasks: prepare_compose_project.yml
   tags:
