--- a/roles/manage.docker_compose/tasks/main.yml
+++ b/roles/manage.docker_compose/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Add host to docker_compose group
+  add_host:
+    name: "{{ ansible_host }}"
+    groups: docker_compose
+
 - name: Include task to install docker_compose
   include_tasks: install_docker_compose.yml
   tags:
