--- a/roles/manage.docker_engine/tasks/main.yml
+++ b/roles/manage.docker_engine/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Add host to docker_engine group
+  add_host:
+    name: "{{ ansible_host }}"
+    groups: docker_engine
+
 - include_tasks: manage_state.yml
   tags:
     - docker
