Feature/docker compose (#7)
* Modified description for task

* Started writing logic for docker_compose

* Fixed curl to work when downloading docker-compose

* Test Readme

* Added gitignore

* Append .gitignore

* Continue work with docker_compose ptoject for ci_cd_lab

* Moved to yaml hosts and groups

--- a/playbooks/install_CICD_lab.yml
+++ b/playbooks/install_CICD_lab.yml
@@ -1,17 +1,18 @@
 ---
-- hosts: all
+- hosts: ci_cd_lab
   gather_facts: no
   become: yes
 
   roles:
     ## INSTALL BASE CONFIG (DOCKER, REPOS ETC)
-    - ../roles/Manage.common_tasks
+    - ../roles/manage.common_tasks
 
     ## MANAGE DOCKER_ENGINE (START / RESTART OR CHANGE CONFIGURATION)
-    - ../roles/Manage.docker_engine
+    - ../roles/manage.docker_engine
 
     ## MANAGE DOCKER_COMPOSE
-    - ../roles/Manage.docker_compose
+    - ../roles/manage.docker_compose
 
     ## START WITH DOCKER_COMPOSE PROJECT
-    - ../roles/Docker_Compose.ci_cd_lab
+    - ../roles/docker_compose.ci_cd_lab
+
