--- a/roles/configuration_docker_engine/tasks/main.yml
+++ b/roles/configuration_docker_engine/tasks/main.yml
@@ -3,6 +3,7 @@
   add_host:
     name: "{{ ansible_host }}"
     groups: docker_engine
+  loop: "{{ ansible_play_hosts }}"
 
 - include_tasks: manage_state.yml
   tags:
